Assets/WebGLTemplates/Fantasmagoria/static/style.css
:root
{
  --root-color: #fff9b9;
}

#unity-container
{
  font-size: 10px;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-color: #191919;
  display: flex;
  justify-content: center;
  align-items: center;
}


#unity-canvas
{
  width: 100%;
  height: 100vh;

  overflow: hidden;
  background: #231F20;
}


#mobile-announce
{
  display: none;
  color: #fff;

  position:absolute;
  vertical-align: bottom;

  left:44vw; 

  z-index: 10;
}


/* HTML5 display-role reset for older browsers */

html, body  , span, applet, object, iframe,
h1, h2, h3, h4, h5, h6 , blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video 
{
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  overflow-y: hidden;
  overflow-x: hidden;
}

article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section
{
  display: block;
}

body
{
  background-color: #1a1a1a;
  line-height: 1;
}


/* Animations */

.center 
{
  position: absolute;
  width: 200px;
  height: 200px;

  border-radius: 100%;


  box-shadow: #191919;

}


.earth, .moon 
{
  position: absolute;
  border-style: solid;
  border-color:  var(--root-color) transparent transparent transparent;
  border-width: 0.2em 0.2em 0 0;
  border-radius: 50%;
}


.earth
{
  height:40em;
  width:40em;

  animation: orbit  36.5s linear infinite;
}

.moon
{
  top:20px;
  right: 0;
  height: 8em;
  width: 8em;

  animation: orbit 2s linear infinite;
}

.earth::before, .moon::before
{
  content: ' ';
  position: absolute;
  border-radius: 50%;
}

.earth::before
{
  top: 4.8em;
  right:3.8em;
  width: 3em;
  height: 3em;
  background-color: var(--root-color);
}

.moon::before
{
  top:0.8em;
  right: 0.2em;
  width: 1.2em;
  height: 1.2em;
  background-color:  var(--root-color);
}

@keyframes orbit
{
  to 
  {
    transform: rotate(360deg);
  }
}

@keyframes fadeOut
{
  from
  {
    opacity: 1;
  }

  to
  {
    opacity: 0;
  }
}

